incrude inbox functions

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "admin-lte": "3.1",
+    "bootstrap-react-treetable": "^2.0.2",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
+    "cp-react-tree-table": "^1.0.0-beta.13",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-moment": "^0.9.7",
