--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "admin-lte": "3.1",
+    "bootstrap": "^4.6.1",
     "bootstrap-react-treetable": "^2.0.2",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
     "cp-react-tree-table": "^1.0.0-beta.13",
+    "date-fns": "^2.28.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.1",
+    "react-to-print": "^2.14.7",
+    "react-uuid": "^1.0.2",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.0"
